Added documentation to Bib.__contains__().


*****  Sat Dec 22 10:03:49 CLT 2018  *****

Removed cond_replace() function. Use cond_find() with join() instead.

*****

Renamed cond_find() to cond_split().
Renamed cond_split() arguments from line,regex to text,pattern.

*****

Added ret_nests argument to cond_split(). When enabled, return the
nested level for the returned substrings.

*****

Changed default behavior of nlev in cond_split() to assume level of
first character in text.

*****

Added 'nested' argument to parse_name() to receive nested level of
input name.

*****

Removed 'protect' argument from cond_split().

*****

Swapped order of first two arguments in cond_next() to have the same
format as cond_split().

*****

Added documentation to next_char() and last_char().
Caught special case when the input string has only blank characters
(return zero).


*****  Sun Dec 23 10:00:15 CLT 2018  *****

Cleaned up many of the docstrings.
Prepended 'r' to docstrings where I need to escape chars.
There are still many functions that need a proper example (wait until
we have the project structured as a package, and integration tests
and examples).

*****

Implemented ordinal() function to compute ordinal representation
of numbers.

*****

Implemented display_bibs() function to show color-syntax bib
entries on screen.
Updated remove_duplicates(), filter_fields(), and merge() to use
display_bibs().

*****

Some minor clean up.

*****

Bumped bibmanager version to 0.1.0.
This next merge closes #1


*****  Mon Dec 24 15:28:54 CLT 2018  *****

Initiated latex management file (latex_manager.py):
Implemented no_comments() to remove comments from latex text.
Implemented citations() to extract citation keys from latex text.

*****

Proposed project/file structure:
utils.py          Utilities
bib_manager.py    BibTeX/database management
latex_manager.py  LaTeX management
ads_manager.py    ADS I/O management
cli_manager.py    Command-line-interface management

*****
